# pigeonhole-proton-compat-plugin

./: .gitignore  INSTALL  Makefile.am  README  configure.ac  sieve-proton-compat-config.h.in
src/: Makefile.am  cmd-expire.c  cmd-unexpire.c  ext-vnd-proton-expire.c  sieve-proton-compat-common.h  sieve-proton-compat-plugin.c  sieve-proton-compat-plugin.h  sieve-proton-expiration.c  sieve-proton-expiration.h  tst-expiration.c  tst-hasexpiration.c
tests/expire/: basic.svtest
